# MimiVerse.AI

./: .env.example  .gitignore  .replit  ARCHITECTURE_AI_RUNTIME.md  DEEP_DIVE_ANALYSIS_2025.md  DGX_LAUNCH_CHECKLIST.md  DGX_SPARK_OPTIMIERUNG_ANALYSE.md  FINAL_SUMMARY.md  IMPLEMENTATION_COMPLETE.md  KOMPLETTE_PROJEKTANALYSE_2025.md  MIMIVERSE_ACCEPTANCE_CRITERIA.md  MIMIVERSE_IDE_DESIGN.md  MIMIVERSE_IDE_REQUIREMENTS.md  MIMIVERSE_IDE_TASKS.md  MIMIVERSE_IMPLEMENTATION_PLAN.md  MIMIVERSE_IMPLEMENTATION_STATUS_UPDATE.md  MIMIVERSE_TECHNICAL_SPEC.md  PHASE2_MODEL_QUANTIZATION.md  PHASE3_COMPLETE.md  PRODUCT_METRICS.md  Q1_2026_ROADMAP.md  Q1_TASK1.1_PROGRESS.md  QUICK_WINS_PROGRESS.md  QUICK_WINS_SETUP.md  README.md  SCQA_SCR_ANALYSE.md  SPRINT_Q1_4WEEKS_PROGRESS.md  TRITON_SETUP_GUIDE.md  WEEK5_IMPLEMENTATION_CHECKLIST.md  WEEK7_8_IMPLEMENTATION_CHECKLIST.md  cookies.txt  docker-compose.yml  drizzle.config.ts  forge.config.ts  package-lock.json  package.json  test-phase3.sh  vercel.json  verify_auth.sh  vite.config.ts  (+3 more)
.contextstream/: config.json
assets/: icon.icns
attached_assets/: Pasted-Here-is-the-Mimiverse-ai-Strategic-Master-Plan-comprising-the-Current-State-Analysis-Elevator-Pitc-1763666955394_1763666955394.txt
client/: index.html
config/: mcp-tools.json
electron/: main.ts  preload.ts
mimiverse-ai/: index.html  package.json
monitoring/: prometheus.yml
scripts/: check-notary.js  simulate_user_flow.ts  test-agent.ts  (+1 more)
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: cascade.rs  code_analyzer.rs  file_indexer.rs  main.rs  mimi_engine.rs
(+157 files in other folders)
